# Changes from Version 1.4.4 to 1.4.5 [8-Feb-2017] #

Allow turning deviance/DIC monitoring on/off when updating an existing model. Overhaul handling of adaptation; default to running a sequence of adapt() calls until JAGS reports adapation is adequate. Suggest minimum of 1000 adaptation iterations otherwise in man pages. Change output of summary function. Add ability to control factories.

# Changes from Version 1.4.3 to 1.4.4 [10-Nov-2016] #

Change default approach to generating random seeds. Add S3 method for View() and convert traceplot() to an S3 method from S4.

# Changes from Version 1.4.2 to 1.4.3 [15-Sept-2016] #

Fix to allow running in parallel when dependencies are in non-standard libraries. Fix bug when updating jagsbasic class.

# Changes from Version 1.4.1 to 1.4.2 [21-Feb-2016] #

Changes to NAMESPACE to get clean build check on R-devel.

# Changes from Version 1.4.0 to 1.4.1 [20-Feb-2016] #

Add ability to specify number of CPU cores to use when running in parallel.

# Changes from Version 1.3.9 to 1.4.0 [10-Feb-2016] #

Fix a problem where saving output for a single scalar parameter broke output processing.

# Changes from Version 1.3.8 to 1.3.9 [21-Jan-2016] #

Fix a problem where nonscalar estimated parameters with missing (i.e., non-estimated) values broke the display of summary stats.

# Changes from Version 1.3.7 to 1.3.8 [13-July-2015] #

Explicitly import functions from default packages to meet new standards for building with R-devel. Change minimum required version of rjags to 3-13.

# Changes from Version 1.3.6 to 1.3.7 [11-June-2015] #

Add verbose argument to functions to allow suppression of all text output in the console as the function runs.

# Changes from Version 1.3.5 to 1.3.6 [6-May-2015] #

Change method for closing connection to clusters when running in parallel to avoid closing unrelated connections. Adjust output for jags.basic.

# Changes from Version 1.3.4 to 1.3.5 [26-Mar-2015] #
