@@ -1,6 +1,6 @@
 Package: jagsUI
-Version: 1.4.5
-Date: 2016-2-9
+Version: 1.4.6
+Date: 2016-5-26
 Title: A Wrapper Around 'rjags' to Streamline 'JAGS' Analyses
 Author: Ken Kellner <contact@kenkellner.com>
 Maintainer: Ken Kellner <contact@kenkellner.com>
